Add event field to examples

--- a/custom_components/event_emitter/services.yaml
+++ b/custom_components/event_emitter/services.yaml
@@ -1,6 +1,9 @@
 call:
   description: Emits a call-service event.
   fields:
+    event:
+      description: event_id
+      example: sonos_tts
     entity_id:
       description: entity_id 
       example: "media_player.lounge"
